# sparx-differential-attacks

./: README.md
code/empirical-tests/: .gitignore  CMakeLists.txt  CPPLINT.cfg  README  README.md  clean.sh  lint.sh  profile.sh
code/empirical-tests/include/ciphers/: sparx64.h
code/empirical-tests/include/utils/: StateIterator.h  argparse.h  convert.h  parity.h  printing.h  xor.h  xorshift1024.h
code/empirical-tests/src/: sparx-64-boomerang-test.cpp  sparx-64-multi-step-backwards-test.cpp  sparx-64-multi-step-forwards-test.cpp  sparx-64-single-step-test.cpp  sparx-64-tests.cpp  sparx-64-truncated-diff-cpa.cpp
code/empirical-tests/src/ciphers/: sparx64.cpp
code/empirical-tests/src/utils/: StateIterator.cpp  convert.cpp  printing.cpp  xor.cpp
results/sparx64_boomerangs/: sparx64_1-step_100-boomerangs_1048576_0000000000400000_8300830281008102.txt  sparx64_2-step_100-boomerangs_1048576_0000000028000010_8000840a00000000.txt  sparx64_2-step_100-boomerangs_1048576_0000000028000010_8100810200000000.txt  sparx64_2-step_100-boomerangs_1048576_0000000028000010_850a952000000000.txt  sparx64_3-step_100-boomerangs_1048576_0000000028000010_8300830281008102.txt  sparx64_3-step_100-boomerangs_1048576_0000000028000010_8a048e0e8000840a.txt  sparx64_3-step_100-boomerangs_1048576_0000000080008000_8300830281008102.txt  sparx64_3-step_100-boomerangs_1073741824_0000000080008000_4040400000400000.txt  sparx64_3-step_100-boomerangs_1073741824_0000000080008000_8000800080008000.txt  sparx64_3-step_100-boomerangs_1073741824_0000000080008000_8300830281008102.txt  sparx64_3-step_100-boomerangs_1073741824_0000000081008102_4040400000400000.txt  sparx64_3-step_100-boomerangs_1073741824_0000000081008102_8000800080008000.txt  sparx64_3-step_100-boomerangs_1073741824_0000000081008102_8300830281008102.txt  sparx64_3-step_100-boomerangs_134217728_0000000080008000_8300830281008102.txt  sparx64_3-step_100-boomerangs_134217728_0000000081008102_8300830281008102.txt
results/sparx64_differentials/: sparx64_6rounds_all_trails.txt  sparx64_7rounds_all_trails.txt  sparx64_8rounds_all_trails.txt  sparx64_9rounds_all_trails.txt  sparx64_trails_minweight.txt
results/sparx64_differentials/differentials/: sparx64_10rounds.txt  sparx64_1rounds.txt  sparx64_2rounds.txt  sparx64_3rounds.txt  sparx64_4rounds.txt  sparx64_5rounds.txt  sparx64_6rounds.txt  sparx64_7rounds.txt  sparx64_8rounds.txt  sparx64_9rounds.txt
results/sparx64_differentials/sparx64_4round_bottom_trails/: sparx64_4rounds_bottom_trail_02110a04_00000000_all.txt  sparx64_4rounds_bottom_trail_02110a04_00000000_min.txt
results/sparx64_truncated_differentials/: sparx-64-truncated-diff-cpa-100-keys.txt  sparx-64-truncated-diff-cpa-100-keys_2.txt
results/speckey_differentials/: speckey32_4rounds_1000_1000.txt  speckey32_4rounds_all_trails.txt  speckey32_4rounds_left_trail_zero.txt  speckey32_4rounds_right_trail_zero.txt  speckey32_trails_minweight.txt
(+84 files in other folders)
